--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="favicon.ico"/>
     <link rel="manifest" href="manifest.webapp"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="swagger-ui/style.css">
 </head>
 <body>
 <!--[if lt IE 9]>
